@@ -1,3 +1,8 @@
+2008-06-05  Badlop  <badlop@process-one.net>
+
+	* doc/guide.tex: Document ejabberdctl status code (EJAB-633)
+	* doc/guide.html: Likewise
+
 2008-06-04  Badlop  <badlop@process-one.net>
 
 	* src/msgs/pl.msg: Bugfix in arguments of translated string that
